fixed logo alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 .my-logo {
   position: relative;
-  top: 12px;
+  top: 2px;
   font-family: 'Poppins', sans-serif;
   text-decoration: none;
   font-style: normal;
